
	* Fixed the updating of client information after backup
	  resuming protocol is over; update all except local clients
	  to the new primary router.  The affected file is
	  silcd/server_util.c.

	* Added support for closing active connections in rehash
	  that were unconfigured by the user.  Supports currently
	  closing server and router connections.  Affected file
	  silcd/server.c.

Sun Jun 23 17:32:31 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Don't do SILC_STRING_LANGUAGE encoding if the outbuffer
	  is NULL since seems that on some platforms NULL is allowed
	  and on some it's not.  Fallback encoding is used instead.
	  Affected file lib/silcutil/silcstrutil.c.

	* Fixed statistics updating for incoming server connection
	  which could cause problems when re-connecting.  Affected
	  file silcd/server.c.

	* Preliminary backup router support for standalone router
	  added.  Affected files in silcd/.

	* Mark server connections in backup router disabled before
	  and after backup protocol.  Affected file is
	  silcd/server_backup.c.

	* Added support for reconnecting to remote server connection
	  even if the protocol fails, and if the configuration wants
	  us to keep trying to connect anyway.

	  Server connection is not allowed to backup router if
	  backup router does not have connection to primary router yet.

	  Affected file is silcd/server.c.

Sat Jun 22 21:34:59 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added silc_client_udpate_server function to update changed
	  server info.  Affected file lib/silcclient/idlist.[ch].

	* Added check for server entries that are being resolved when
	  notify is received.  If being resolved, handle the received
	  notify only after it's resolved so that all notifys are
	  handled in same order as received from the server.

	  Added similar resolver check to channel entries.  Every
	  notify that cause resolving of any information that affects