@@ -35,8 +35,6 @@ TODO/bugs In SILC Server
 	  cell use it.  When primary goes down, also those that are
 	  not using it (are not connected locally) are signoffed.
 
-	o Rewrite SILC_LOG_DEBUG's in silcd/server_backup.c.
-
 	o Testing
 
  o Add a timeout to handling incoming JOIN commands.  It should be 
