@@ -322,7 +322,7 @@ static DebugLevel debug_levels[] = {
   { 3, "silcd\\.c,server\\.c" },
 
   /* More stuff from silcd/ */
-  { 7, "silcd\\.c,server\\.c,command\\.c" },
+  { 7, "silcd\\.c,server\\.c,command\\.c,server_backup\\.c" },
 
   /* All basic stuff from silcd/ */
   { 10, "silc_server_*" },
