@@ -1,0 +1,68 @@
+#
+# Standalone router
+# 212.146.24.253 on 1334
+#
+# This is the only router in this cell, which means that the router is
+# standalone and the router does not have primary route.
+#
+
+Include "silcalgs.conf";
+
+ServerInfo {
+	hostname = "lassi.kuo.fi.ssh.com";
+	primary { ip = "212.146.42.253"; port = 1334; };
+
+	user = "nobody";
+	group = "nobody";
+
+	servertype = "Test Router";
+	location = "Undisclosed location";
+	Admin = "Pekka Riikonen";
+	AdminEmail = "priikone@silcnet.org";
+
+	publickey = "./silcd.pub";
+	privatekey = "./silcd.prv";
+
+	motdfile = "./motd";
+};
+
+Logging {
+	quicklogs = true;
+	info { file = "cell_router.log"; };
+};
+
+# Router administrator
+Admin {
+	user = "priikone";
+	passphrase = "testi";
+};
+
+##############################################################################
+#
+# Accept all client connections without authentication
+#
+Client { };
+
+##############################################################################
+#
+# This server use me as primary router.  It is normal server in the cell.
+#
+ServerConnection {
+	host = "212.146.42.251";
+	passphrase = "priikone";
+};
+
+##############################################################################
+#
+# This server is our backup router (it will replace me if I go down).  It
+# also can act as normal server in the cell.
+#
+RouterConnection {
+	host = "212.146.42.252";
+	passphrase = "priikone";
+
+	# Mark that this local backup router replaces us
+	backuphost = "212.146.42.253";
+	backupport = 1334;
+	backuplocal = true;
+};
